    * new command wzip - will zip a single file
    * better welcome message with version
    * PlatformSpecificHelperWin.init_platform_tools will not look for download tool is configVat DOWNLOAD_TOOL_PATH is not defined
        this will avoid excption in commands such as uninstall that do not need download tool anyway
    * changed WZLIB_EXTENSION defualt value to .wzip

    programmer visible changes:
    * new member InstlInstanceBase.instl_ver_str

6/5/2018 1.7.3.5

    user visible changes:
    * InstlClient.create_remove_previous_sources_instructions_for_target_folder no instructions are created if folder does not exist.
    * InstlClientUninstall.init_uninstall_vars now calls calc_user_cache_dir_var() because variables defined in calc_user_cache_dir_var are needed during installations
    * not set -e for uninstall so if some instruction fails the script will continue (Mac/linux)

3/5/2018 1.7.3.4
    user visible changes:
    * improved do_remove_empty_folders command by using try/except around each remove command
            so that if one folder/file fails to be removed the code will continue to remove other folders/files.
            also message is printed for each failed file/folder
    * improved readability of uninstall batch file by adding extra empty lines

2/5/2018 1.7.3.3
    admin visible changes:
    * fixed and improved the code that uploads to s3
    * PlatformSpecificHelperLinux.rm_file_or_dir was not implemented, now it is
    * SVNTable.update_parent_ids_q: parent_id of top level dirs is set to 0
    * wtar with bz2 compression: changed compressleve to 1 instead of the default 9. This proved to create wtars that are only 2% more in size but unwtar is 13% faster, see CEN-1711

1/5/2018 1.7.3.2
    user visible changes:
    * fixed: sources that were single wtar file were not copied to destination

1/5/2018 1.7.3.1

    programmer visible changes: